~ Fix: On small screens the comment form width must not exceed page width.

--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ select {
   background: #ffffff;
   font-family: 'Roboto', sans-serif;
   font-size: 1.9em;
+  width: 100%
 }
 /* typography
 -------------------------------------------------------------- */
